src/snapshots/molt__tests__transform__match___rename.snap
---
source: src/lib.rs
expression: "super :: super :: transform(stringify! (transform), stringify! (rename))"
---
fn main() {
    let new_name = 42;
    let result = new_name + 1;

    // intentionally misformatted code to make sure rustfmt is
    // run on the code.
    let new_name = 10;
}

fn example10() {
    let value = Some(42);
    let result = match value {
        Some(x) => Ok(x * 2),
        None => Ok(0),
    };
}
